# Jubilee-Lending

./: .env.example  .gitignore  README.md  frontend_config.json  hardhat.config.js  package-lock.json  package.json
audit/: AUDIT_REPORT_20260125.md  JUBL_AUDIT_REPORT.md  JUBL_REDTEAM_REPORT.md
contracts/: ChoiceYield.sol  CollateralManager.sol  EmergencyModule.sol  FeeCollector.sol  FirstFruitsFund.sol  HealthFactorCalculator.sol  JBTCi.sol  JETHs.sol  JUBL.sol  JUBLBoost.sol  JUBLEmissions.sol  JUBLVesting.sol  JubileeIndex.sol  JubileeLending.sol  JubileeTimelock.sol  LiquidationEngine.sol  OracleAggregator.sol  YieldRouter.sol  jUSDi.sol
contracts/governance/: GrantsModule.sol
contracts/test/: MockERC20.sol  MockV3Aggregator.sol
docs/: AUDIT_REPORT.md  PRE_MAINNET_CHECKLIST.md  USER_GUIDE.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: Layout.tsx  TermsGuard.tsx  TermsModal.tsx
scripts/: configure_oracles.js  deploy-jubl-mainnet.js  deploy-jubl.js  deploy-redeploy-fixed.js  deploy-resume.js  deploy-sepolia-v2-resume.js  deploy-sepolia-v2.js  deploy-sepolia.js  deploy.js  deploy_base_sepolia.js  deploy_governance.js  e2e-test-sepolia.js  fix-vesting-owner.js  keeper.js  verify-all.sh
solana-program/jubilee_lending/: Anchor.toml
solana-program/jubilee_lending/programs/jubilee_lending/: Cargo.toml
solana-program/jubilee_lending/programs/jubilee_lending/src/: lib.rs
test/: Integration.test.js  JubileeLending.exploits.test.js  JubileeLending.test.js
(+5 files in other folders)
